Fix scrollbar

--- a/main.css
+++ b/main.css
@@ -77,7 +77,7 @@ body {
     -ms-overflow-style: none;
 }
 
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
     display: none;
 }
 
